[gd_scene load_steps=10 format=2]

[ext_resource path="res://nodes/HintPanelArmy.gd" type="Script" id=1]
[ext_resource path="res://nodes/ArmyTagList.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/AbyssinicaSIL-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ui/bg_army.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/birchstd.OTF" type="DynamicFontData" id=5]
[ext_resource path="res://assets/ui/red_line.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=13]
size = 99
outline_size = 5
extra_spacing_char = -1
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 41
outline_size = 3
outline_color = Color( 0.168627, 0.168627, 0.168627, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
size = 36
outline_color = Color( 0.168627, 0.168627, 0.168627, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = ExtResource( 3 )

[node name="HintPanelArmy" type="ColorRect"]
margin_left = -1.0
margin_right = -1.0
mouse_filter = 2
color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
script = ExtResource( 1 )

[node name="bg" type="TextureRect" parent="."]
margin_left = -81.0
margin_top = -29.0
margin_right = 720.0
margin_bottom = 348.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true

[node name="lb_name" type="Label" parent="."]
margin_left = 22.0
margin_top = 14.0
margin_right = 334.0
margin_bottom = 114.0
custom_colors/font_color = Color( 0.505882, 0.121569, 0.0588235, 1 )
custom_constants/line_spacing = -1
custom_fonts/font = SubResource( 13 )
text = "ESCOPETA"
valign = 1
autowrap = true

[node name="l1" type="TextureRect" parent="."]
margin_left = 25.0
margin_top = 115.0
margin_right = 605.0
margin_bottom = 117.0
mouse_filter = 2
texture = ExtResource( 6 )
expand = true

[node name="l2" type="TextureRect" parent="."]
margin_left = 25.0
margin_top = 291.0
margin_right = 605.0
margin_bottom = 293.0
mouse_filter = 2
texture = ExtResource( 6 )
expand = true

[node name="ArmyTagList" parent="." instance=ExtResource( 2 )]
margin_left = 213.0
margin_top = 5.0
margin_right = 623.0
margin_bottom = 108.0

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 33, 102 )
scale = Vector2( 1.5, 1.5 )

[node name="lb_amount" type="Label" parent="."]
visible = false
margin_left = 14.0
margin_top = 139.0
margin_right = 94.0
margin_bottom = 191.0
custom_constants/line_spacing = -1
custom_fonts/font = SubResource( 10 )
text = "x3"
align = 2
valign = 1
autowrap = true

[node name="lb_desc" type="Label" parent="."]
margin_left = 16.0
margin_top = 120.0
margin_right = 614.0
margin_bottom = 287.0
custom_colors/font_color = Color( 0.843137, 0.843137, 0.843137, 1 )
custom_constants/line_spacing = -1
custom_fonts/font = SubResource( 14 )
text = "Hace un disparo que causa 1 da√±o al primer enemigo."
valign = 1
autowrap = true
